{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 194,
  "lineage": "6212aec2-c6f7-a7af-f8e9-d23e1c04fca8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0efcd70d6d745b26c",
            "arn": "arn:aws:ec2:us-west-2:635401290725:instance/i-0e301ff9c6a8ef251",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e301ff9c6a8ef251",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mtckey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03372066f03df3a5f",
            "private_dns": "ip-10-123-0-79.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.0.79",
            "public_dns": "ec2-34-219-215-246.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.215.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f30e20cc0a3da325",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e1c3d5752cfad65",
            "tags": {
              "name": "dev-node"
            },
            "tags_all": {
              "name": "dev-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab8e8052e5243863"
            ]
          },
          "dependencies": [
            "aws_key_pair.ntc_auth",
            "aws_security_group.ntc_sg",
            "aws_subnet.ntc_subnet",
            "aws_vpc.ntc_vpc",
            "data.aws_ami.sever_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ntc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:635401290725:internet-gateway/igw-030dd3bacc08017c8",
            "id": "igw-030dd3bacc08017c8",
            "owner_id": "635401290725",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-07579a992acb6137c"
          },
          "dependencies": [
            "aws_vpc.ntc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-030dd3bacc08017c8",
            "id": "r-rtb-02d7b7ef57c12cb211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d7b7ef57c12cb21",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ntc_internet_gateway",
            "aws_route_table.ntc_public_rt",
            "aws_vpc.ntc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ntc_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:635401290725:route-table/rtb-02d7b7ef57c12cb21",
            "id": "rtb-02d7b7ef57c12cb21",
            "owner_id": "635401290725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev_public_rt"
            },
            "tags_all": {
              "Name": "dev_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07579a992acb6137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ntc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ntc_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03699d9b7606cbc96",
            "route_table_id": "rtb-02d7b7ef57c12cb21",
            "subnet_id": "subnet-04e1c3d5752cfad65"
          },
          "dependencies": [
            "aws_route_table.ntc_public_rt",
            "aws_subnet.ntc_subnet",
            "aws_vpc.ntc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ntc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:635401290725:security-group/sg-0ab8e8052e5243863",
            "description": "dev security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab8e8052e5243863",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev_sg",
            "name_prefix": "",
            "owner_id": "635401290725",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07579a992acb6137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ntc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ntc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:635401290725:subnet/subnet-04e1c3d5752cfad65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.123.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e1c3d5752cfad65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635401290725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "vpc_id": "vpc-07579a992acb6137c"
          },
          "dependencies": [
            "aws_vpc.ntc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ntc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:635401290725:vpc/vpc-07579a992acb6137c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-075a5b7476883c68a",
            "default_route_table_id": "rtb-0917556772b1ade7b",
            "default_security_group_id": "sg-05dc52c9c84b2785a",
            "dhcp_options_id": "dopt-023496e5182aa095c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07579a992acb6137c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0917556772b1ade7b",
            "owner_id": "635401290725",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}